# flag_simulation

./: CMakeLists.txt  README.md
Utils/: CMakeLists.txt
Utils/include/Utils/: Flag.h  Sphere.hpp  WindowManager.hpp  glm.hpp
Utils/include/Utils/renderer/: FlagRenderer3D.hpp  GLtools.hpp  Renderer3D.h  Sphere.hpp  TrackballCamera.hpp
Utils/src/: Flag.cpp  Sphere.cpp  WindowManager.cpp
Utils/src/renderer/: FlagRenderer3D.cpp  GLtools.cpp  Renderer3D.cpp  Sphere.cpp
src/: main.cpp
